--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN="ODY2MDkxNTMzNzA1Njc0Nzgy.YPNgmA.2KjJYSH-U6ckbPlRH65fQyr6-ws"
+DISCORD_TOKEN="NzkxMDU4NDQ3ODk4MjQ3MjE4.X-Jolw.8pOd7bMr0OuCX8yU3vy9V834x5Q"
